--- a/templates/conventions/select_operation_list.html
+++ b/templates/conventions/select_operation_list.html
@@ -111,9 +111,9 @@
     <script type="text/javascript" nonce="{{request.csp_nonce}}">
         rows = document.querySelectorAll('tr.clickable')
         rows.forEach(row => {
-            numero = row.children[0].innerText
+            numero = row.children[0].textContent
             row.addEventListener("click", () => {
-                window.location = "add_convention?numero_operation=" + numero
+                window.location = "add_convention?numero_operation=" + encodeURIComponent(numero)
             })
         });
     </script>
