--- a/templates/conventions/add_from_operation/select_operation.html
+++ b/templates/conventions/add_from_operation/select_operation.html
@@ -16,8 +16,8 @@
         </div>
 
         <div class="fr-grid-row fr-grid-row--gutters">
-            <div class="fr-col-md-12 fr-mb-5w">
-                {% comment %} TODO: add stepper {% endcomment %}
+            <div class="fr-col-md-12">
+                {% include "./stepper.html"%}
             </div>
         </div>
 
@@ -43,7 +43,7 @@
 
         <div class="fr-grid-row fr-grid-row--gutters fr-mt-4w">
             <div class="fr-col-md-12">
-                {% include "conventions/select_operation_list.html" %}
+                {% include "conventions/add_from_operation/select_operation_list.html" %}
             </div>
         </div>
 
