--- a/templates/conventions/add_from_operation/select_operation.html
+++ b/templates/conventions/add_from_operation/select_operation.html
@@ -6,14 +6,8 @@
 
 {% block content %}
 
-    <div class="fr-container">
-        <div class="fr-grid-row fr-grid-row--gutters">
-            <div class="fr-col-12 fr-my-3w block--row-strech fr-grid-row--middle">
-                <div class="block--row-strech-1">
-                    <h2 class="m-0">Ajouter une convention existante</h2>
-                </div>
-            </div>
-        </div>
+    <div class="fr-container fr-my-5w">
+        <h4>Ajouter une convention existante</h4>
 
         <div class="fr-grid-row fr-grid-row--gutters">
             <div class="fr-col-md-12">
