Add operation info in step 2

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1004,3 +1004,16 @@ button:not(:disabled).apilos-btn--secondary--red:hover {
 .hidden {
   display: none;
 }
+
+.apilos-info-operation {
+  background: #f4f6ff;
+  padding: 1.5em;
+}
+.apilos-info-operation span{
+  padding-right: 1em;
+  border-right: #e5e5e5 solid 2px;
+  margin-right: 1em;
+}
+.apilos-info-operation span:last-child {
+  border-right: none;
+}
