--- a/templates/conventions/add_from_operation/create_convention.html
+++ b/templates/conventions/add_from_operation/create_convention.html
@@ -19,79 +19,94 @@
 
         {% include "./stepper.html"%}
 
-        <h6>Détails de la convention à ajouter</h6>
-        <form method="post" action="" enctype="multipart/form-data">
-            {% csrf_token %}
-            <div class="fr-grid-row fr-grid-row--gutters">
-                <div class="fr-col-6">
-                    {% include "common/form/input_text.html" with form_input=form.numero  mandatory_input=True editable=True %}
-                </div>
-                <div class="fr-col-6">
-                    {% include "common/form/input_text.html" with form_input=form.nom  mandatory_input=True editable=True %}
-                </div>
-                <div class="fr-col-6">
-                    {% include "common/form/input_select.html" with form_input=form.bailleur without_empty_option=form.bailleur.field.choices|length_is:1 mandatory_input=True editable=True %}
-                    <script type="text/javascript" nonce="{{request.csp_nonce}}">
-                        document.addEventListener('DOMContentLoaded', function () {
-                            VirtualSelect.init({
-                                ele: '#{{form.bailleur.id_for_label}}',
-                                multiple: false,
-                                hideClearButton: true,
-                                search: true,
-                                searchPlaceholderText: "Rechercher votre bailleur...",
-                                noSearchResultsText: "Aucun bailleur ne correspond à votre recherche"
-                            });
-                        });
-                    </script>
-                </div>
-                <div class="fr-col-6">
-                    {% include "common/form/input_select.html" with form_input=form.administration without_empty_option=form.administration.field.choices|length_is:1 mandatory_input=True editable=True%}
-                    <script type="text/javascript" nonce="{{request.csp_nonce}}">
-                        document.addEventListener('DOMContentLoaded', function () {
-                            VirtualSelect.init({
-                                ele: '#{{form.administration.id_for_label}}',
-                                multiple: false,
-                                hideClearButton: true,
-                                search: true,
-                                searchPlaceholderText: "Rechercher votre administration...",
-                                noSearchResultsText: "Aucune administration ne correspond à votre recherche"
-                            });
-                        });
-                    </script>
-                </div>
-                <div class="fr-col-6">
-                    {% include 'common/form/input_select.html' with form_input=form.nature_logement editable=True %}
-                </div>
-                <div class="fr-col-6">
-                    {% include "common/form/input_number.html" with form_input=form.nb_logements editable=True %}
-                </div>
-                <div class="fr-col-6">
-                    {% include "common/form/input_select.html" with form_input=form.financement mandatory_input=True editable=True %}
-                </div>
-                <div class="fr-col-6">
-                    {% include "common/form/input_number.html" with form_input=form.annee_signature mandatory_input=True editable=True %}
-                </div>
+        {% if operation is None %}
+            <div class="apilos-info-operation">
+                <h3>Opération introuvable</h3>
+                <div class="fr-col-12">Aucune opération ne correspond à ce numéro.</div>
+            </div>
+        {% else %}
+            <div class="apilos-info-operation fr-mb-5w">
+                <h3>Opération : {{operation.nom}}</h3>
                 <div class="fr-col-12">
-                    <div class="fr-upload-group">
-                        <label class="fr-label" for="file-upload">Déposer la convention (en PDF)
-                            <span class="fr-hint-text">Taille maximale : 500 Mo. Formats supportés : pdf</span>
-                        </label>
-                        <input
-                            class="fr-upload"
-                            type="file"
-                            id="file-upload"
-                            name="nom_fichier_signe"
-                            accept="application/pdf"
-                        >
+                    <span><u>Opération {{operation.numero}}</u></span>
+                    <span>{{operation.commune}}</span>
+                    <span>Bailleur : {{operation.bailleur}}</span>
+                </div>
+            </div>
+            <h6>Détails de la convention à ajouter</h6>
+            <form method="post" action="" enctype="multipart/form-data">
+                {% csrf_token %}
+                <div class="fr-grid-row fr-grid-row--gutters">
+                    <div class="fr-col-6">
+                        {% include "common/form/input_text.html" with form_input=form.numero  mandatory_input=True editable=True %}
+                    </div>
+                    <div class="fr-col-6">
+                        {% include "common/form/input_text.html" with form_input=form.nom  mandatory_input=True editable=True %}
+                    </div>
+                    <div class="fr-col-6">
+                        {% include "common/form/input_select.html" with form_input=form.bailleur without_empty_option=form.bailleur.field.choices|length_is:1 mandatory_input=True editable=True %}
+                        <script type="text/javascript" nonce="{{request.csp_nonce}}">
+                            document.addEventListener('DOMContentLoaded', function () {
+                                VirtualSelect.init({
+                                    ele: '#{{form.bailleur.id_for_label}}',
+                                    multiple: false,
+                                    hideClearButton: true,
+                                    search: true,
+                                    searchPlaceholderText: "Rechercher votre bailleur...",
+                                    noSearchResultsText: "Aucun bailleur ne correspond à votre recherche"
+                                });
+                            });
+                        </script>
+                    </div>
+                    <div class="fr-col-6">
+                        {% include "common/form/input_select.html" with form_input=form.administration without_empty_option=form.administration.field.choices|length_is:1 mandatory_input=True editable=True%}
+                        <script type="text/javascript" nonce="{{request.csp_nonce}}">
+                            document.addEventListener('DOMContentLoaded', function () {
+                                VirtualSelect.init({
+                                    ele: '#{{form.administration.id_for_label}}',
+                                    multiple: false,
+                                    hideClearButton: true,
+                                    search: true,
+                                    searchPlaceholderText: "Rechercher votre administration...",
+                                    noSearchResultsText: "Aucune administration ne correspond à votre recherche"
+                                });
+                            });
+                        </script>
+                    </div>
+                    <div class="fr-col-6">
+                        {% include 'common/form/input_select.html' with form_input=form.nature_logement editable=True %}
+                    </div>
+                    <div class="fr-col-6">
+                        {% include "common/form/input_number.html" with form_input=form.nb_logements editable=True %}
+                    </div>
+                    <div class="fr-col-6">
+                        {% include "common/form/input_select.html" with form_input=form.financement mandatory_input=True editable=True %}
+                    </div>
+                    <div class="fr-col-6">
+                        {% include "common/form/input_number.html" with form_input=form.annee_signature mandatory_input=True editable=True %}
+                    </div>
+                    <div class="fr-col-12">
+                        <div class="fr-upload-group">
+                            <label class="fr-label" for="file-upload">Déposer la convention (en PDF)
+                                <span class="fr-hint-text">Taille maximale : 500 Mo. Formats supportés : pdf</span>
+                            </label>
+                            <input
+                                class="fr-upload"
+                                type="file"
+                                id="file-upload"
+                                name="nom_fichier_signe"
+                                accept="application/pdf"
+                            >
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="form-button-footer fr-py-5w">
-                <button class="fr-btn fr-icon-arrow-right-s-line fr-btn--icon-right">
-                    Enregistrer
-                </button>
-            </div>
-        </form>
+                <div class="form-button-footer fr-py-5w">
+                    <button class="fr-btn fr-icon-arrow-right-s-line fr-btn--icon-right">
+                        Enregistrer
+                    </button>
+                </div>
+            </form>
+        {% endif %}
     </div>
 
 {% endblock %}
