--- a/templates/conventions/convention_list.html
+++ b/templates/conventions/convention_list.html
@@ -254,7 +254,7 @@
                                 <div class="fr-grid-row fr-grid-row--gutters" >
                                     {% flag "ajout_convention" %}
                                         <div>
-                                            <a class="fr-btn fr-icon-add-line fr-btn--icon-left fr-btn--secondary fr-mr-2w" href="{% url 'conventions:select_operation' %}">
+                                            <a class="fr-btn fr-icon-add-line fr-btn--icon-left fr-btn--secondary fr-mr-2w" href="{% url 'conventions:operation_select' %}">
                                                 Ajouter une convention existante dans le SIAP / Apilos
                                             </a>
                                         </div>
